# webapp7update

Webapp7 - Backup/: TWS_GATEWAY_SETUP.md  TWS_SETUP_GUIDE.md  app.py  config.py  pyproject.toml  replit.md  requirements.txt  run_standalone.py  standalone_trading_app.py  trading_engine.py
Webapp7 - Backup/attached_assets/: Pasted--Standalone-Python-Trading-Application-Complete-trading-engine-with-GUI-interface-non-web-v-1750458230491_1750458230492.txt  Pasted-INFO-trading-engine-3-Socket-port-7497-paper-trading-INFO-trading-engine-4-Uncheck-Read-1750449683291_1750449683291.txt  Pasted-INFO-trading-engine-5-Restart-TWS-after-changes-INFO-trading-engine-Running-in-simulation-mod-1750450542616_1750450542617.txt  _1750419204270.replit  advanced_trading_engine_1750419204271.py  authentic_web_app_1750419204272.py  config_1750419204273.py  enhanced_web_app_1750419204275.py  gui_components_1750419204250.py  logger_config_1750419204252.py  main_1750419204253.py  pyproject_1750419204254.toml  replit_1750419204256.md  reserve_file_1750419370438.py  risk_manager_1750419204257.py  simple_web_app_1750419204260.py  simplified_trading_engine_1750419204261.py  technical_analyzer_1750419204263.py  trading_engine_1750419204264.py  utils_1750419204266.py  web_app_1750419204268.py
Webapp7 - Backup/static/css/: styles.css
Webapp7 - Backup/static/js/: analytics.js  dashboard.js  settings.js
Webapp7 - Backup/templates/: analytics.html  base.html  dashboard.html  settings.html
(+2 files in other folders)
